--- a/core/ingress.yaml
+++ b/core/ingress.yaml
@@ -4,6 +4,9 @@ metadata:
   name: main-ingress
   namespace: ${NAMESPACE}
   annotations:
+    alb.ingress.kubernetes.io/actions.ssl-redirect: "{\"Type\": \"redirect\", \"RedirectConfig\": { \"Protocol\": \"HTTPS\", \"Port\": \"443\", \"StatusCode\": \"HTTP_301\"}}"
+    alb.ingress.kubernetes.io/listen-ports: "[{\"HTTPS\":443}]"
+    alb.ingress.kubernetes.io/certificate-arn: "${CERTIFICATE_ARN}"
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: instance
     alb.ingress.kubernetes.io/healthcheck-path: "/health"
