--- a/.github/workflows/gateway_template.yaml
+++ b/.github/workflows/gateway_template.yaml
@@ -106,7 +106,7 @@ jobs:
           KUBE_CONFIG_DATA: ${{ secrets.kube-config-data }}
         with:
           args: |
-            apply -f  ${{ inputs.root-folder }}/../core/ingress.gen.yml
+            apply -f  ${{ inputs.root-folder }}/deploy/k8s/deployment.gen.yml
       - name: deploy ingress to cluster
         uses: evosecurity/kubectl-aws-eks@master
         env:
